--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^0.3.1",
+    "moment": "^2.29.1",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-notifications": "^1.7.2",
+    "react-spinners": "^0.10.6",
     "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
