--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@headlessui/react": "^0.3.1",
     "moment": "^2.29.1",
     "next": "10.0.3",
+    "query-string": "^6.14.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-notifications": "^1.7.2",
