--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "@headlessui/react": "^0.3.1",
+    "babel-jest": "^26.6.3",
+    "from": "^0.1.7",
+    "import": "^0.0.6",
+    "jest": "^26.6.3",
     "moment": "^2.29.1",
     "next": "10.0.3",
+    "nock": "^13.0.8",
+    "node-mocks-http": "^1.10.1",
     "query-string": "^6.14.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
